<resources>
    <string name="app_name">sixcat</string>
    <string name="Intelligence_place">智能场馆</string>
    <string name="wel_join">欢迎体验智能场馆自助服务</string>
    <string name="use_this">请使用以下签到方式</string>
    <string name="add_face">添加人脸识别</string>
    <string name="add_finger">添加指静脉</string>
    <string name="bind_face_id">绑定人脸</string>
    <string name="bind_finger_id">绑定指静脉</string>
    <string name="class_begin">上课</string>
    <string name="class_eliminate">消课</string>
    <string name="sign_in">签到</string>
    <string name="please_input_tel">请输入手机号</string>
    <string name="please_input_tel_right">请输入正确的手机号</string>
    <string name="digitKeyppad_clear">清空</string>
    <string name="digitKeyppad_delect">退格</string>
    <string name="digitKeyppad_zero">0</string>
    <string name="digitKeyppad_nine">9</string>
    <string name="digitKeyppad_eight">8</string>
    <string name="digitKeyppad_seven">7</string>
    <string name="digitKeyppad_six">6</string>
    <string name="digitKeyppad_five">5</string>
    <string name="digitKeyppad_four">4</string>
    <string name="digitKeyppad_three">3</string>
    <string name="digitKeyppad_two">2</string>
    <string name="digitKeyppad_one">1</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="_60s">下一步60s</string>
    <string name="recent">重发</string>
    <string name="bind_success">绑定成功请开启你的健身之旅</string>
    <string name="introduce_faces">请将人脸置于相机预览框内</string>
    <string name="open_camera_error">App部分功能需要使用到相机，请开启相机权限。</string>
    <string name="none_face">人脸特征无法检测，请换一张图片</string>
    <string name="face_success">人脸识别成功</string>
    <string name="again_finger">请移开手指,再次放置...</string>
    <string name="same_finger">验证错误，请放置同一根手指</string>
    <string name="move_finger">请移开手指,再次放置</string>
    <string name="finger_success">手指验证成功</string>

    <string name="mode_one">方式1.指静脉签到</string>
    <string name="mode_one_hint">请将手指正确放置模块上方完成验证，切勿用力按压听到“验证成功”签到成功</string>
    <string name="mode_two">方式2.人脸签到</string>
    <string name="mode_two_hint">请将脸部对准上方摄像头，听到“验证成功”签到成功</string>
    <string name="mode_three">方式3.二维码签到</string>
    <string name="mode_three_hint">请将小程序二维码放置扫描枪进行扫描，听到“验证成功”签到成功</string>
    <string name="net_error">网络异常请检查网络!</string>
    <string name="download">通知栏下载中</string>


    <string name="coach_finger">请教练放置手指</string>
    <string name="none_identify">未识别</string>
    <string name="cheack_fail">验证失败</string>
    <string name="coach_first">请教练先放手指</string>
    <string name="student_finger">请学员放置手指</string>
    <string name="none_faces">无人脸数据</string>
    <string name="boy">男</string>
    <string name="girl">女</string>

    <string name="member">会员</string>
    <string name="office_holder">工作人员</string>
    <string name="right_finger">请正确放置手指</string>
    <string name="please_sure">请确认个人信息</string>
    <string name="please_add_finger">请放置手指</string>
    <string name="cheack_sueccess">验证成功</string>
    <string name="class_time">上课时间</string>
    <string name="souke_coach">授课教练</string>
    <string name="class_name">卡名:</string>
    <string name="surplus_time">剩余次数:</string>
    <string name="card_number">卡号:</string>
    <string name="card_type">类型:</string>
    <string name="term_of_validity">有效期至:</string>


    <string name="please_begain">请开启你的健身之旅</string>

    <string name="sign_successful">签到成功</string>

    <string name="open_read_error">App部分功能需要使用读取权限</string>
    <string name="sure">确定</string>
    <string name="face_camere">请对准摄像头</string>
    <string name="bind_face_success">绑定成功</string>


    <string name="device_id">设备ID:</string>
    <string name="mac_id">MAC地址:</string>
    <string name="version_name">版本号:</string>
    <string name="restart">重启APP</string>
    <string name="synchro_data">同步数据</string>
    <string name="finish">退出设置</string>
    <string name="power">高电</string>
    <string name="low_power">低电</string>
    <string name="back_system_main">返回系统主界面</string>
    <string name="cheack_phone">密码验证</string>
    <string name="please_input_password">请输入你的密码</string>
    <string name="psw_cheak_fail">密码验证失败</string>
    <string name="psw_cheak_success">密码验证成功</string>


</resources>
