<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/phoneNum"
        android:layout_width="@dimen/w418"
        android:layout_height="@dimen/h53"
        android:layout_marginTop="@dimen/h71"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_rectangle_corner_r20"
        android:hint="@string/please_input_tel"
        android:paddingLeft="@dimen/w32"
        android:textColor="@color/color_black_333333"
        android:textColorHint="@color/color_gray_999999"
        android:textSize="@dimen/w32" />


    <LinearLayout
        android:layout_width="@dimen/w418"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/h15"
        android:background="@drawable/border_choose_one_gradient_bg"
        android:orientation="vertical">


        <GridLayout
            android:layout_width="@dimen/w418"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:paddingLeft="@dimen/w68"
            android:paddingRight="@dimen/w68"
            android:paddingTop="@dimen/h11"
            android:rowCount="6">

            <Button
                android:id="@+id/bind_keypad_1"
                style="@style/input_Number_style"
                android:text="@string/digitKeyppad_one" />


            <Button
                android:id="@+id/bind_keypad_2"
                style="@style/input_Number_style"
                android:layout_marginLeft="@dimen/w35"
                android:text="@string/digitKeyppad_two" />

            <Button
                android:id="@+id/bind_keypad_3"
                style="@style/input_Number_style"
                android:layout_marginLeft="@dimen/w35"
                android:text="@string/digitKeyppad_three" />


            <Button
                android:id="@+id/bind_keypad_4"
                style="@style/input_Number_style"
                android:layout_marginTop="@dimen/h11"
                android:text="@string/digitKeyppad_four" />


            <Button
                android:id="@+id/bind_keypad_5"
                style="@style/input_Number_style"
                android:layout_marginLeft="@dimen/w35"
                android:layout_marginTop="@dimen/h11"
                android:text="@string/digitKeyppad_five" />

            <Button
                android:id="@+id/bind_keypad_6"
                style="@style/input_Number_style"
                android:layout_marginLeft="@dimen/w35"
                android:layout_marginTop="@dimen/h11"
                android:text="@string/digitKeyppad_six" />


            <Button
                android:id="@+id/bind_keypad_7"
                style="@style/input_Number_style"
                android:layout_marginTop="@dimen/h11"
                android:text="@string/digitKeyppad_seven" />


            <Button
                android:id="@+id/bind_keypad_8"
                style="@style/input_Number_style"
                android:layout_marginLeft="@dimen/w35"
                android:layout_marginTop="@dimen/h11"
                android:text="@string/digitKeyppad_eight" />

            <Button
                android:id="@+id/bind_keypad_9"
                style="@style/input_Number_style"
                android:layout_marginLeft="@dimen/w35"
                android:layout_marginTop="@dimen/h11"
                android:text="@string/digitKeyppad_nine" />

            <Button
                android:id="@+id/cleanButton"
                style="@style/input_Number_style"
                android:layout_marginTop="@dimen/h11"
                android:background="@null"
                android:text="@string/digitKeyppad_clear" />


            <Button
                android:id="@+id/bind_keypad_0"
                style="@style/input_Number_style"
                android:layout_marginLeft="@dimen/w35"
                android:layout_marginTop="@dimen/h11"
                android:text="@string/digitKeyppad_zero" />

            <Button
                android:id="@+id/deleteButton"
                style="@style/input_Number_style"
                android:layout_marginLeft="@dimen/w35"
                android:layout_marginTop="@dimen/h11"
                android:background="@null"
                android:text="@string/digitKeyppad_delect" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/w30"
            android:layout_marginTop="@dimen/h22"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/h62"
                android:layout_marginLeft="@dimen/w30"
                android:layout_marginRight="@dimen/w11"
                android:layout_weight="1"
                android:background="@drawable/border_add_face"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="@dimen/w35" />

            <TextView
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/h62"
                android:layout_marginLeft="@dimen/w11"
                android:layout_marginRight="@dimen/w30"
                android:layout_weight="1"
                android:background="@drawable/border_white_member"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/color_black_333333"
                android:textSize="@dimen/w35" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>