<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <com.link.cloud.widget.PublicTitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="@string/Intelligence_place" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h110"
        android:text="@string/wel_join"
        android:textColor="@color/white"
        android:textSize="@dimen/w41" />

    <View
        style="@style/DividerLineHorizontal"
        android:layout_width="@dimen/w33"
        android:layout_height="@dimen/h6"
        android:layout_marginTop="@dimen/h26" />


    <ImageView
        android:layout_width="@dimen/w167"
        android:layout_height="@dimen/w167"
        android:layout_marginTop="@dimen/h103"
        android:background="@drawable/ic_eliminate_class" />

    <ImageView
        android:layout_width="@dimen/w167"
        android:layout_height="@dimen/w167"
        android:layout_marginTop="@dimen/h71"
        android:background="@drawable/ic_class_begins" />

    <TextView
        android:id="@+id/lastButton"
        android:layout_width="@dimen/w380"
        android:layout_height="@dimen/h62"
        android:background="@drawable/border_lesson"
        android:gravity="center"
        android:layout_marginTop="@dimen/h96"
        android:textColor="@color/red"
        android:text="@string/add_face"
        android:textSize="@dimen/w35" />

    <TextView
        android:id="@+id/sureButton"
        android:layout_width="@dimen/w380"
        android:layout_height="@dimen/h62"
        android:text="@string/add_finger"
        android:layout_marginTop="@dimen/h96"
        android:background="@drawable/border_red_gradient"
        android:gravity="center"
        android:textColor="@color/almost_white"
        android:textSize="@dimen/w35" />


</LinearLayout>
